/*
 * UCF COP3330 Fall 2021 Assignment 3 Solutions
 * Copyright 2021 Rafael Alvarez-Romero
 */

package ex45;

public class app {
    public static void main(String[] args) {

        new replace();

    }
}